--- a/config/assets/sass/_fonts.scss
+++ b/config/assets/sass/_fonts.scss
@@ -28,6 +28,20 @@ article {
     }
 }
 
-span.inline {
-    vertical-align: bottom;
+span {
+    &.inline {
+        vertical-align: bottom;
+    }
+
+    &.middle {
+        vertical-align: middle;
+    }
+
+    &.size {
+        font-size: 1em;
+    }
+
+    &.margin {
+        margin-left: 1.125em;
+    }
 }
