Registration progress checkpoint

--- a/config/assets/sass/_colors.scss
+++ b/config/assets/sass/_colors.scss
@@ -10,6 +10,8 @@ $article_gradient : linear-gradient(
     rgba( 189, 216, 236, 1 ) 100%
 ) !default;
 
+$shaded: #f0f0f0;
+
 $a_link   : blue !default;
 $a_visited: darkblue !default;
 $a_hover  : blue !default;
