--- a/config/assets/sass/_forms.scss
+++ b/config/assets/sass/_forms.scss
@@ -73,7 +73,7 @@ a.button {
 fieldset {
     border-radius   : 0.4em;
     text-align      : right;
-    background-color: #f0f0f0;
+    background-color: colors.$shaded;
     vertical-align  : top;
     margin-right    : 1em;
 
