--- a/templates/pages/meet/register.html.tt
+++ b/templates/pages/meet/register.html.tt
@@ -8,7 +8,9 @@
 
 <h1>[% page.title %]</h1>
 
-[% IF meet %]
+[% IF NOT meet %]
+    <p>There doesn't appear to be an upcoming meet scheduled.</p>
+[% ELSE %]
     [% PROCESS meet_info.html.tt %]
 
     <div id="register" v-cloak>
@@ -17,7 +19,7 @@
                 <legend>Your Personal Registration</legend>
                 <p>
                     Are you <i>personally</i> attending this meet?
-                    <template v-if="! meet.registration_closed">
+                    <template v-if="can_edit">
                         <label><input type="radio" value="1" v-model="reg.user.attend"> Yes</label>
                         <label><input type="radio" value="0" v-model="reg.user.attend"> No</label>
                     </template>
@@ -30,7 +32,7 @@
                     <fieldset class="left">
                         <legend>Your Meet Roles</legend>
                         <p>
-                            <template v-if="! meet.registration_closed">
+                            <template v-if="can_edit">
                                 <label v-for="role in roles">
                                     <input type="checkbox" v-bind:value="role" v-model="reg.user.roles">
                                     {{ role }}
@@ -50,7 +52,7 @@
                         </legend>
                         <p>
                             Are you driving a vehicle you could use to transport passengers to a host home?
-                            <template v-if="! meet.registration_closed">
+                            <template v-if="can_edit">
                                 <label><input type="radio" value="1" v-model="reg.user.drive"> Yes</label>
                                 <label><input type="radio" value="0" v-model="reg.user.drive"> No</label>
                             </template>
@@ -61,7 +63,7 @@
 
                         <p v-if="meet.host.housing">
                             Do you need overnight housing?
-                            <template v-if="! meet.registration_closed">
+                            <template v-if="can_edit">
                                 <label><input type="radio" value="1" v-model="reg.user.house"> Yes</label>
                                 <label><input type="radio" value="0" v-model="reg.user.house"> No</label>
                             </template>
@@ -72,7 +74,7 @@
 
                         <p v-if="meet.host.lunch">
                             Would you like host-provided lunch?
-                            <template v-if="! meet.registration_closed">
+                            <template v-if="can_edit">
                                 <label><input type="radio" value="1" v-model="reg.user.lunch"> Yes</label>
                                 <label><input type="radio" value="0" v-model="reg.user.lunch"> No</label>
                             </template>
@@ -83,20 +85,16 @@
                     </fieldset>
                 </template>
             </fieldset>
-
-            <fieldset class="left notes">
-                <legend>Notes</legend>
-
-                <template v-if="! meet.registration_closed">
-                    <textarea v-model="reg.notes"></textarea>
-                </template>
-                <template v-else>
-                    <b>{{ reg.notes }}</b>
-                </template>
-            </fieldset>
         </form>
 
-        <div v-if="can_register_teams" v-for="( org, org_index ) in reg.orgs">
+        <div v-if="cant_register_teams">
+            <p>
+                Only coaches are allowed to register quizzers and teams. If you
+                are a coach, select the coach role above or add "Coach" to your
+                <a v-bind:href="urls.user_edit">account profile</a>.
+            </p>
+        </div>
+        <div v-else v-for="( org, org_index ) in reg.orgs">
             <h2>Quizzers from {{ org.name }} ({{ org.acronym }})</h2>
 
             <p>
@@ -113,7 +111,7 @@
                 The following is the quizzer registration data for {{ org.name }}:
             </p>
 
-            <ul class="show_if_small" v-if="org.teams.length > 0">
+            <ul class="show_if_small" v-if="org.teams.length">
                 <li><b>Rk:</b> Rookie</li>
                 <li><b>At:</b> Attend</li>
                 <li v-if="meet.host.housing"><b>Hs:</b> House</li>
@@ -126,7 +124,7 @@
                 <table>
                     <thead>
                         <tr>
-                            <th v-if="! meet.registration_closed"></th>
+                            <th v-if="can_edit"></th>
                             <th>Name</th>
                             <th>Bible</th>
                             <th>M/F</th>
@@ -146,14 +144,14 @@
                                 <span class="hide_if_small">Lunch</span>
                                 <span class="show_if_small">Ln</span>
                             </th>
-                            <th v-if="! meet.registration_closed"></th>
+                            <th v-if="can_edit"></th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr v-for="( quizzer, person_index ) in team"
                             v-bind:class="{ inactive: ! quizzer.attend }"
                         >
-                            <td v-if="! meet.registration_closed">
+                            <td v-if="can_edit">
                                 <span class="material-symbols-outlined inline"
                                     v-on:click="reorder( -1, org_index, team_index, person_index )"
                                     >arrow_upward</span>
@@ -162,7 +160,7 @@
                                     >arrow_downward</span>
                             </td>
                             <td>
-                                <template v-if="! meet.registration_closed">
+                                <template v-if="can_edit">
                                     <input type="text" name="name" v-model="quizzer.name">
                                 </template>
                                 <template v-else>
@@ -170,7 +168,7 @@
                                 </template>
                             </td>
                             <td>
-                                <template v-if="! meet.registration_closed">
+                                <template v-if="can_edit">
                                     <select name="bible" v-model="quizzer.bible">
                                         <option v-for="bible in bibles" v-bind:value="bible"
                                             >{{ bible }}</option>
@@ -181,7 +179,7 @@
                                 </template>
                             </td>
                             <td>
-                                <template v-if="! meet.registration_closed">
+                                <template v-if="can_edit">
                                     <select name="m_f" v-model="quizzer.m_f">
                                         <option>M</option>
                                         <option>F</option>
@@ -192,7 +190,7 @@
                                 </template>
                             </td>
                             <td class="center">
-                                <template v-if="! meet.registration_closed">
+                                <template v-if="can_edit">
                                     <input type="checkbox" v-model="quizzer.rookie">
                                 </template>
                                 <template v-else>
@@ -200,7 +198,7 @@
                                 </template>
                             </td>
                             <td class="center">
-                                <template v-if="! meet.registration_closed">
+                                <template v-if="can_edit">
                                     <input type="checkbox" v-model="quizzer.attend">
                                 </template>
                                 <template v-else>
@@ -208,7 +206,7 @@
                                 </template>
                             </td>
                             <td v-if="meet.host.housing" class="center">
-                                <template v-if="! meet.registration_closed">
+                                <template v-if="can_edit">
                                     <input type="checkbox" v-model="quizzer.house"
                                         v-bind:disabled="! quizzer.attend">
                                 </template>
@@ -217,7 +215,7 @@
                                 </template>
                             </td>
                             <td v-if="meet.host.lunch" class="center">
-                                <template v-if="! meet.registration_closed">
+                                <template v-if="can_edit">
                                     <input type="checkbox" v-model="quizzer.lunch"
                                         v-bind:disabled="! quizzer.attend">
                                 </template>
@@ -225,130 +223,131 @@
                                     {{ ( quizzer.lunch ) ? "Yes" : "No" }}
                                 </template>
                             </td>
-                            <template v-if="! meet.registration_closed">
-                                <td>
-                                    <span class="material-symbols-outlined inline"
-                                        v-on:click="delete_quizzer( org_index, team_index, person_index )"
-                                        >delete</span>
-                                </td>
-                            </template>
+                            <td v-if="can_edit">
+                                <span class="material-symbols-outlined inline"
+                                    v-on:click="delete_quizzer( org_index, team_index, person_index )"
+                                    >delete</span>
+                            </td>
                         </tr>
                     </tbody>
-                    <caption v-if="! meet.registration_closed" align="bottom">
+                    <caption v-if="can_edit" align="bottom">
                         <button v-on:click="add_quizzer(team)">Add a Quizzer</button>
                     </caption>
                 </table>
             </div>
-
-            <p v-if="! meet.registration_closed">
+            <p v-if="can_edit">
                 <button v-on:click="add_team(org)">Add a Team</button>
             </p>
-        </div>
-        <div v-else>
+
+            <h2>Non-Quizzers from {{ org.name }} ({{ org.acronym }})</h2>
+
             <p>
-                Only coaches are allowed to register quizzers and teams. If you
-                are a coach, select the coach role above or add "Coach" to your
-                <a v-bind:href="user_edit">account profile</a>.
+                Use this section to provide registration information for any
+                non-you non-quizzers. Please coordinate with these non-quizzers
+                to ensure there won't be duplicate registrations for them.
+                that will appear on the
+                <a v-bind:href="urls.meet_data">Quiz Meet Registration Data</a>
+                page.
+            </p>
+
+            <ul class="show_if_small" v-if="org.nonquizzers.length">
+                <li><b>Rk:</b> Rookie</li>
+                <li><b>At:</b> Attend</li>
+                <li v-if="meet.host.housing"><b>Hs:</b> House</li>
+                <li v-if="meet.host.lunch"><b>Ln:</b> Lunch</li>
+            </ul>
+
+            <table v-if="org.nonquizzers.length">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>
+                            <span class="hide_if_small">Attend</span>
+                            <span class="show_if_small">At</span>
+                        </th>
+                        <th v-if="meet.host.housing">
+                            <span class="hide_if_small">House</span>
+                            <span class="show_if_small">Hs</span>
+                        </th>
+                        <th v-if="meet.host.lunch">
+                            <span class="hide_if_small">Lunch</span>
+                            <span class="show_if_small">Ln</span>
+                        </th>
+                        <th v-if="can_edit"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="( nonquizzer, person_index ) in org.nonquizzers"
+                        v-bind:class="{ inactive: ! nonquizzer.attend }"
+                    >
+                        <td>
+                            <template v-if="can_edit">
+                                <input type="text" name="name" v-model="nonquizzer.name">
+                            </template>
+                            <template v-else>
+                                {{ nonquizzer.name }}
+                            </template>
+                        </td>
+                        <td class="center">
+                            <template v-if="can_edit">
+                                <input type="checkbox" v-model="nonquizzer.attend">
+                            </template>
+                            <template v-else>
+                                {{ ( nonquizzer.attend ) ? "Yes" : "No" }}
+                            </template>
+                        </td>
+                        <td class="center" v-if="meet.host.housing">
+                            <template v-if="can_edit">
+                                <input type="checkbox" v-model="nonquizzer.house">
+                            </template>
+                            <template v-else>
+                                {{ ( nonquizzer.house ) ? "Yes" : "No" }}
+                            </template>
+                        </td>
+                        <td class="center" v-if="meet.host.lunch">
+                            <template v-if="can_edit">
+                                <input type="checkbox" v-model="nonquizzer.lunch">
+                            </template>
+                            <template v-else>
+                                {{ ( nonquizzer.lunch ) ? "Yes" : "No" }}
+                            </template>
+                        </td>
+                        <td v-if="can_edit">
+                            <span class="material-symbols-outlined inline"
+                                v-on:click="delete_nonquizzer( org_index, person_index )"
+                                >delete</span>
+                        </td>
+                    </tr>
+                </tbody>
+                <caption align="bottom" v-if="can_edit">
+                    <button v-on:click="add_nonquizzer(org_index)">Add a Non-Quizzer</button>
+                </caption>
+            </table>
+            <p v-else><button v-on:click="add_nonquizzer(org_index)">Add a Non-Quizzer</button></p>
+        </div>
+
+        <form>
+            <fieldset class="notes">
+                <legend>Notes and/or Requests</legend>
+
+                <template v-if="can_edit">
+                    <textarea v-model="reg.notes"></textarea>
+                </template>
+                <template v-else>
+                    <b>{{ reg.notes }}</b>
+                </template>
+            </fieldset>
+        </form>
+
+        <div v-if="can_edit && changed">
+            <h2>Save Registration Data</h2>
+            <p>
+                You can save registration data as many times as you'd like up until
+                the deadline.
+            </p>
+            <p>
+                <button v-on:click="save_registration" class="colored">Save Registration Data</button>
             </p>
         </div>
     </div>
-
-[% IF 0 %] <!-- TODO... -->
-
-    <h2>Non-Quizzers from {{ org.name }}</h2>
-
-    <p>
-        Use this secton to provide registration information for any non-you
-        non-quizzers. Please coordinate with your non-quizzers to ensure
-        there won't be duplicate registrations for them that will appear on
-        the <b><a href="[% c.url_for('meet_data') %]">Quiz Meet Registration
-        Data</a></b> page.
-    </p>
-
-    <table v-if="nonquizzers.length">
-        <thead>
-            <tr>
-                <th>Name</th>
-                [% IF next_meet.house %]<th>House</th>[% END %]
-                [% IF next_meet.lunch %]<th>Lunch</th>[% END %]
-                <th>Notes</th>
-                [% UNLESS no_edit %]<th></th>[% END %]
-            </tr>
-        </thead>
-        <tbody>
-            <tr v-for="( nonquizzer, person_index ) in nonquizzers">
-                <td>
-                    [% UNLESS no_edit %]
-                        <input type="text" name="name" v-model="nonquizzer.name">
-                    [% ELSE %]
-                        {{ nonquizzer.name }}
-                    [% END %]
-                </td>
-                [% IF next_meet.house %]
-                    <td class="center">
-                        [% UNLESS no_edit %]
-                            <input type="checkbox" v-model="nonquizzer.house">
-                        [% ELSE %]
-                            {{ ( nonquizzer.house ) ? "Yes" : "No" }}
-                        [% END %]
-                    </td>
-                [% END %]
-                [% IF next_meet.lunch %]
-                    <td class="center">
-                        [% UNLESS no_edit %]
-                            <input type="checkbox" v-model="nonquizzer.lunch">
-                        [% ELSE %]
-                            {{ ( nonquizzer.lunch ) ? "Yes" : "No" }}
-                        [% END %]
-                [% END %]
-                </td>
-                <td>
-                    [% UNLESS no_edit %]
-                        <input type="text" name="notes" v-model="nonquizzer.notes">
-                    [% ELSE %]
-                        {{ nonquizzer.notes }}
-                    [% END %]
-                </td>
-                [% UNLESS no_edit %]
-                    <td><i class="fa-solid fa-trash"
-                        v-on:click="delete_nonquizzer(person_index)"
-                    ></i></td>
-                [% END %]
-            </tr>
-        </tbody>
-        [% UNLESS no_edit %]
-            <caption align="bottom">
-                <button v-on:click="add_nonquizzer()">Add a Non-Quizzer</button>
-            </caption>
-        [% END %]
-    </table>
-    <p v-else><button v-on:click="add_nonquizzer()">Add a Non-Quizzer</button></p>
-
-    [% UNLESS no_edit %]
-        <div v-if="changed == 1">
-            <h2>Save Registration Data</h2>
-            <p>
-                You can save registration data as many times as you'd like up
-                until the deadline.
-            </p>
-            <p>
-                <button v-on:click="save_registration">Save Registration Data</button>
-            </p>
-
-            <form
-                id="register_save"
-                method="post"
-                action="[% c.url_for('/tool/register_save') %]"
-                enctype="multipart/form-data"
-                style="display: none"
-            >
-                <input type="text" name="data" value="">
-            </form>
-        </div>
-    [% END %]
-
-<!-- ...TODO --> [% END %]
-
-[% ELSE %]
-    <p>There doesn't appear to be an upcoming meet scheduled.</p>
 [% END %]
