--- a/config/assets/sass/_misc.scss
+++ b/config/assets/sass/_misc.scss
@@ -11,8 +11,17 @@ div.current_next_meet {
 div.box {
     background-color: colors.$background;
     border          : 1px solid colors.$lines;
-    padding         : 0.25em 0.5em;
+    padding         : 0.5em;
+    border-radius   : 0.5em;
     width           : fit-content;
+
+    p:first-of-type {
+        margin-top: 0;
+    }
+
+    p:last-of-type {
+        margin-bottom: 0;
+    }
 }
 
 .hidden {
