--- a/config/assets/sass/_header_footer.scss
+++ b/config/assets/sass/_header_footer.scss
@@ -6,6 +6,12 @@ header {
     button {
         margin: 0 0.3em;
     }
+
+    div.login {
+        font-size   : 0.75em;
+        line-height : 1em;
+        margin-right: 0.25em;
+    }
 }
 
 dialog.memo {
